Replace screenshots and add a screenshot for mobile launchscreen Make the app SEO friendly

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>WasmPass</title>
+  <meta name="description" content="WasmPass is a Progressive Web App powered by WebAssembly and the C++ fast_io library. Generate secure passwords, usernames, and PINs with high performance and safety" />
+  <title>WasmPass – Generate Secure Passwords, Usernames, and PINs with WebAssembly and the C++ fast_io Library</title>
 
   <!-- PWA manifest and theme -->
   <link rel="manifest" href="manifest.webmanifest">
